# lai

./: .dockerignore  .gitignore  AI Insdide-Yolov8 Adaptation Instructions.docx  BACKUP_PATH_GUIDE.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  README_advanced.md  SAM_BROWSER_IMPLEMENTATION_PLAN.md  SAM_IMPLEMENTATION_SUMMARY.md  SEGMENTATION_MASK_FIX.md  TESTING_SETUP.md  calibration.json  docker-compose.code-mount.yml  docker-compose.yml  environment.yml  index.html  optimize_database.bat  optimize_database.sh  package-lock.json  package.json  playwright.config.ts  playwright.marketing.config.ts  pyproject.toml  pytest.ini  restart_backend.bat  run-tests.sh  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  docker-publish.yml  release-pypi.yml
backend/: .dockerignore  BACKUP_DATABASE_INFO.md  CLI_TRAINING_COMMANDS.sh  DJI_MMYOLO_TRAINING_GUIDE.md  DJI_QUICK_REFERENCE.md  add_database_indexes.py  alembic.ini  build_inpainting_docker.bat  check_backend_status.bat  check_backend_status.sh  check_dependencies.py  fix_alembic.py  install_albumentations.py  manage_training.bat  manage_training.sh  requirements-backend.txt  requirements.txt  run_inpainting_docker.bat  start_training_service.bat
backend/app/: auto_annotate_collection.py  celery_app.py  config.py  database.py  dataset_list_helpers.py  dataset_media_paths.py  db_bootstrap.py  db_cleanup.py  evaluation_artifacts.py  foundation_models.py  http_utils.py  lai_version.py  main.py  model_weights_presence.py  models.py  schemas.py  task_dispatch.py  task_stop.py
backend/migrations/: env.py
backend/python_scripts/: align_color_with_detections.py  convert_coco_annotations_to_shapefile.py  convert_shapefile_to_coco_annotations.py  crop_orthomosaic.py  extract_bandss.py  fiftyone_analyses.py  match_shapefile_to_crops.py  remove_class_from_coco.py  slice_images.py
backend/sam_service/: app.py  utils.py
backend/scripts/: build_ml_images.sh  celery_worker_gpu.sh  docker-entrypoint.sh  download_depth_anything_models.py  download_mmyolo_models.py  download_ultralytics_models.py  mmyolo_eval_inference.py  setup_mmyolo_dji.sh  ultralytics_train.py
deploy/: api-proxy-prefixes.json  spa-project-routes.mjs
deploy/nginx/: default.conf
dockers/: docker-compose.code-mount.yml  docker-compose.yml
dockers/backend/: Dockerfile  Dockerfile.celery  Dockerfile.inpainting.stable  Dockerfile.mmyolo.runtime  Dockerfile.training.legacy  Dockerfile.ultralytics.runtime  Dockerfile.worker-general  Dockerfile.worker-gpu  constraints-ml-yolo.txt  docker-compose.ci.yml  docker-compose.yml  requirements-api.txt  requirements-celery.txt  requirements-worker-base.txt  requirements-worker-general.txt  requirements-worker-gpu.txt  sitecustomize.py
dockers/frontend/: Dockerfile
dockers/sam/: Dockerfile  requirements-git.txt  requirements.txt
docs/: INSTALL_USERS.md  WORKERS.md
lai/: __init__.py  bundle.py  cli.py  compose_build.py  compose_files.py  compose_pull.py  constants.py  docker_preflight.py  http_fetch.py  paths.py  registry.py  uninstall.py  wizard.py
scripts/: build_dist_bundle.sh  build_stack.sh  check_no_hardcoded_api_url.py  check_sam3.sh  fix_dataset_services.py  install.sh  splice_datasets_router.py  write_registry_env.py
scripts/archive/: extract_dataset_services.py  split_annotation_processing.py  split_predictions_router.py  split_training_router.py
src/: App.tsx  appVersion.ts  index.css  main.tsx
src/components/: AddGroupModal.tsx  AddImageTabDialog.tsx  AnnotationChoiceModal.tsx  AnnotationFileCard.tsx  AnnotationFilters.tsx  AnnotationImagesDialog.tsx  AnnotationMinimap.tsx  AnnotationStatusBar.tsx  AnnotationTagsDialog.tsx  AnnotationToolbar.tsx  AnnotationVisualizer.tsx  AnnotationsContent.tsx  AnnotationsUploadDialog.tsx  AppVersionFooter.tsx  AutoAnnotateModal.tsx  ChunkedImageCollectionUploadDialog.tsx  ChunkedImageUploadDialog.tsx  ClassColorOpacityPicker.tsx  ClassColorPicker.tsx  ClassManagementMenu.tsx  ClassStatistics.tsx  ClassStatisticsWithManagement.tsx  CompareAnnotationsDialog.tsx  ConfirmDeleteDialog.tsx  ConfusionMatrixCellModal.tsx  CoverageMatrix.tsx  CreateAugmentedDatasetModal.tsx  DatabaseManager.tsx  DatasetBreadcrumb.tsx  DatasetCard.tsx  DatasetEvalPicker.tsx  DatasetForm.tsx  DatasetGroupCard.tsx  (+63 more)
tests/: .gitignore  .seed-segmentation.json  TEST_SETUP.md  global-setup.ts  perf-profile.ts  perf-server.ts  test-helpers.ts
(+381 files in other folders)
