[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laivision"
version = "0.1.0"
description = "LAI: a platform to train and deploy AI vision models — datasets, annotation, training, and evaluation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lilita Kiforenko", email = "lki@mmmi.sdu.dk" }]
license = "AGPL-3.0-only"
# No Python runtime deps — the CLI shells out to Docker Compose (system requirement; see README).
dependencies = []
license-files = ["LICENSE"]
keywords = ["annotation", "docker", "segmentation", "dataset"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
lai = "lai.cli:main"

[project.urls]
Homepage = "https://laivision.dk"
Documentation = "https://github.com/kilimi/lai/blob/main/README.md"
Repository = "https://github.com/kilimi/lai"
Issues = "https://github.com/kilimi/lai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lai*"]

[tool.setuptools.exclude-package-data]
lai = ["bin/*", "lib/*", "include/*", "share/*", "pyvenv.cfg"]

[tool.setuptools.package-data]
lai = ["bundle/**/*"]
